--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -1,12 +1,15 @@
 cmake_minimum_required(VERSION 3.15)
 
-juce_add_module(gin)
-juce_add_module(gin_dsp)
-juce_add_module(gin_graphics)
-juce_add_module(gin_gui)
-juce_add_module(gin_location)
-juce_add_module(gin_metadata)
-juce_add_module(gin_network)
-juce_add_module(gin_plugin)
-juce_add_module(gin_webp)
-juce_add_module(gin_simd)
+juce_add_modules(
+    ALIAS_NAMESPACE gin
+    gin
+    gin_dsp
+    gin_graphics
+    gin_gui
+    gin_location
+    gin_metadata
+    gin_network
+    gin_plugin
+    gin_webp
+    gin_simd
+)
