--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,13 @@
 cmake_minimum_required(VERSION 3.15)
+
+project(Gin VERSION 1.0.0)
+
+option(GIN_BUILD_EXAMPLES "Build the example app" OFF)
+
 set_property(GLOBAL PROPERTY USE_FOLDERS YES)
 set(JUCE_ENABLE_MODULE_SOURCE_GROUPS ON CACHE BOOL "" FORCE)
 set (CMAKE_CXX_STANDARD 20)
 set (CMAKE_POSITION_INDEPENDENT_CODE ON)
-
-project(Gin VERSION 1.0.0)
-
 set (CMAKE_OSX_DEPLOYMENT_TARGET 10.9)
 
 Include(FetchContent)
@@ -18,6 +20,9 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(JUCE)
 
 add_subdirectory(modules)
-add_subdirectory(examples/Demo)
-add_subdirectory(examples/Effect)
-add_subdirectory(examples/Synth)
+
+if (GIN_BUILD_EXAMPLES)
+    add_subdirectory(examples/Demo)
+    add_subdirectory(examples/Effect)
+    add_subdirectory(examples/Synth)
+endif()
