Do not override global settings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,6 @@ project(Gin VERSION 1.0.0)
 
 option(GIN_BUILD_EXAMPLES "Build the example app" OFF)
 
-set_property(GLOBAL PROPERTY USE_FOLDERS YES)
-set(JUCE_ENABLE_MODULE_SOURCE_GROUPS ON CACHE BOOL "" FORCE)
-set (CMAKE_CXX_STANDARD 20)
-set (CMAKE_POSITION_INDEPENDENT_CODE ON)
-set (CMAKE_OSX_DEPLOYMENT_TARGET 10.9)
-
 Include(FetchContent)
 
 FetchContent_Declare(
@@ -22,6 +16,14 @@ FetchContent_MakeAvailable(JUCE)
 add_subdirectory(modules)
 
 if (GIN_BUILD_EXAMPLES)
+    # TODO make target
+
+    # set_property(GLOBAL PROPERTY USE_FOLDERS YES)
+    # set(JUCE_ENABLE_MODULE_SOURCE_GROUPS ON CACHE BOOL "" FORCE)
+    # set (CMAKE_CXX_STANDARD 20)
+    # set (CMAKE_POSITION_INDEPENDENT_CODE ON)
+    # set (CMAKE_OSX_DEPLOYMENT_TARGET 10.9)
+
     add_subdirectory(examples/Demo)
     add_subdirectory(examples/Effect)
     add_subdirectory(examples/Synth)
